Enhance layout and styling for brand section and add welcome section

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       </section>
       <!-- brands  -->
        <section class="min-h-[212px] bg-primary dark:bg-dark2 py-5">
-        <div class="container h-full flex justify-center items-center flex-col gap-7">
+        <div class="container h-full flex justify-center items-center flex-col gap-10">
           <h2 class="font-bold text-[18px] md:text-2xl text-center uppercase dark:text-white">"Doing the job of eight traditional cookware  <br>pieces"</h2>
           <div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-12 lg:gap-[113px] place-items-center">
             <img src="./src/assets/brands logo (4).svg" alt="" class="dark:invert dark:brightness-0"/>
@@ -110,8 +110,18 @@
           </div>
         </div>
        </section>
+       <!-- welcome  -->
+        <section class="dark:bg-dark">
+          <div class="container min-h-[340px] flex flex-col lg:flex-row items-center gap-[30px] lg:gap-[155px] place-content-center">
+          <h2 class="font-bold text-[18px] sm:text-[22px] md:text-[32px] lg:text-[41px] text-center uppercase dark:text-white">Welcome to Our <br> Place</h2>
+            <p class="max-w-[650px] text-sm md:text-[16px] dark:text-white">At Our Place, we believe in the power of home-cooking to bring people together. Our collections are new heirlooms from the cultures and places that make up the fabric of the modern multi-ethnic kitchen. We design thoughtfully, source ethically, and produce sustainably because what we make is connected to one another and the earth we share.</p>
+          </div>
+        </section>
+        
     </main>
 
+
+    <!-- js  -->
     <script src="./src/js/app.js"></script>
   </body>
 </html>
