add section with mazgi narsala bilan

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         SHIPPING AND RETURNS ARE ALWAYS FREE FROM OUR PLACE TO YOURS 🙂
       </p>
     </div>
-    <header class="sticky top-0 left-0 z-50 bg-white dark:bg-dark2">
+    <header class="sticky top-0 left-0 z-50 bg-white dark:bg-sky-950">
       <nav
         class="container flex h-[82px] justify-between items-center relative dark:text-white"
       >
@@ -99,27 +99,81 @@
         </div>
       </section>
       <!-- brands  -->
-       <section class="min-h-[212px] bg-primary dark:bg-dark2 py-5">
-        <div class="container h-full flex justify-center items-center flex-col gap-10">
-          <h2 class="font-bold text-[18px] md:text-2xl text-center uppercase dark:text-white">"Doing the job of eight traditional cookware  <br>pieces"</h2>
-          <div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-12 lg:gap-[113px] place-items-center">
-            <img src="./src/assets/brands logo (4).svg" alt="" class="dark:invert dark:brightness-0"/>
-            <img src="./src/assets/brands logo (3).svg" alt="" class="dark:invert dark:brightness-0"/>
-            <img src="./src/assets/brands logo (2).svg" alt="" class="dark:invert dark:brightness-0"/>
-            <img src="./src/assets/brands logo (1).svg" alt="" class="dark:invert dark:brightness-0"/>
+      <section class="min-h-[212px] bg-primary dark:bg-dark2 py-5">
+        <div
+          class="container h-full flex justify-center items-center flex-col gap-10"
+        >
+          <h2
+            class="font-bold text-[18px] md:text-2xl text-center uppercase dark:text-white"
+          >
+            "Doing the job of eight traditional cookware <br />pieces"
+          </h2>
+          <div
+            class="grid sm:grid-cols-2 lg:grid-cols-4 gap-12 lg:gap-[113px] place-items-center"
+          >
+            <img
+              src="./src/assets/brands logo (4).svg"
+              alt=""
+              class="dark:invert dark:brightness-0"
+            />
+            <img
+              src="./src/assets/brands logo (3).svg"
+              alt=""
+              class="dark:invert dark:brightness-0"
+            />
+            <img
+              src="./src/assets/brands logo (2).svg"
+              alt=""
+              class="dark:invert dark:brightness-0"
+            />
+            <img
+              src="./src/assets/brands logo (1).svg"
+              alt=""
+              class="dark:invert dark:brightness-0"
+            />
           </div>
         </div>
-       </section>
-       <!-- welcome  -->
-        <section class="dark:bg-dark">
-          <div class="container min-h-[340px] flex flex-col lg:flex-row items-center gap-[30px] lg:gap-[155px] place-content-center">
-          <h2 class="font-bold text-[18px] sm:text-[22px] md:text-[32px] lg:text-[41px] text-center uppercase dark:text-white">Welcome to Our <br> Place</h2>
-            <p class="max-w-[650px] text-sm md:text-[16px] dark:text-white">At Our Place, we believe in the power of home-cooking to bring people together. Our collections are new heirlooms from the cultures and places that make up the fabric of the modern multi-ethnic kitchen. We design thoughtfully, source ethically, and produce sustainably because what we make is connected to one another and the earth we share.</p>
+      </section>
+      <!-- welcome  -->
+      <section class="dark:bg-dark">
+        <div
+          class="container min-h-[340px] flex flex-col lg:flex-row items-center gap-[30px] lg:gap-[155px] place-content-center"
+        >
+          <h2
+            class="font-bold text-[18px] sm:text-[22px] md:text-[32px] lg:text-[41px] text-center uppercase dark:text-white"
+          >
+            Welcome to Our <br />
+            Place
+          </h2>
+          <p
+            class="max-w-[650px] text-xs min-[450px]:text-sm md:text-[16px] dark:text-white"
+          >
+            At Our Place, we believe in the power of home-cooking to bring
+            people together. Our collections are new heirlooms from the cultures
+            and places that make up the fabric of the modern multi-ethnic
+            kitchen. We design thoughtfully, source ethically, and produce
+            sustainably because what we make is connected to one another and the
+            earth we share.
+          </p>
+        </div>
+      </section>
+      <!-- designed  -->
+      <section class="bg-primary dark:bg-dark2">
+        <div class=" max-[350px]:min-h-[400px] max-[540px]:min-h-[600px] min-h-[800px] lg:min-h-[900px] container text-center dark:text-white pt-[35px] lg:pt-[70px] pb-[30px]">
+          <h2 class="max-w-[564px] w-full dark:text-white text-[18px] sm:text-2xl md:text-3xl lg:text-[35px] mx-auto">Designed for Everything and Always</h2>
+          <img src="./src/assets/Frame.svg" alt="" class="mx-auto mt-[27px] md:mt-[52px]"/>
+          <div class="relative">
+            <img src="./src/assets/Rectangle.png" alt="" class="mt-[30px] mx-auto">
+            <span class="text-xs uppercase absolute top-10 right-[30%] max-[1096px]:right-[25%] max-[915px]:right-[20%] max-[720px]:right-[10%] max-[525px]:text-[10px] max-[525px]:right-0 max-[375px]:hidden">Beechwood spatula & <br>built-in spoon rest</span>
+            <span class="text-xs uppercase absolute top-22 left-[20%] max-[292px]:left-[15%] max-[1122px]:left-[10%] max-[960px]:left-[3%] max-[800px]:left-[0%] max-[760px]:hidden">Modular lid to <br> release & trap steam</span>
+            <span class="text-xs uppercase absolute top-[50%] right-[30%] max-[1096px]:right-[25%] max-[915px]:right-[20%] max-[720px]:right-[10%] max-[525px]:text-[10px] max-[525px]:right-0 max-[375px]:hidden">Nesting steamer basket & <br> colander</span>
+            <span class="text-xs uppercase absolute top-[63%] left-[27%] max-[1292px]:left-[23%] max-[1122px]:left-[19%] max-[915px]:left-[14%] max-[768px]:left-[3%] max-[525px]:text-[10px] max-[525px]:left-0 max-[375px]:hidden">2 easy-pour <br> spouts</span>
+            <span class="text-xs uppercase absolute top-[78%] right-[28%] max-[1096px]:right-[22%] max-[915px]:right-[18%] max-[720px]:right-[5%] max-[525px]:text-[10px] max-[525px]:right-[0%] max-[375px]:hidden">stay cool handle</span>
+            <span class="text-xs uppercase absolute top-[84%] left-[20%] max-[1292px]:left-[15%] max-[1122px]:left-[10%] max-[960px]:left-[6%] max-[915px]:left-[2%] max-[760px]:hidden ">Exclusive, ceramic <br> nonstick made without <br> PFOAs & PTFEs</span>
           </div>
-        </section>
-        
+        </div>
+      </section>
     </main>
-
 
     <!-- js  -->
     <script src="./src/js/app.js"></script>
