add card section

--- a/index.html
+++ b/index.html
@@ -159,17 +159,174 @@
       </section>
       <!-- designed  -->
       <section class="bg-primary dark:bg-dark2">
-        <div class=" max-[350px]:min-h-[400px] max-[540px]:min-h-[600px] min-h-[800px] lg:min-h-[900px] container text-center dark:text-white pt-[35px] lg:pt-[70px] pb-[30px]">
-          <h2 class="max-w-[564px] w-full dark:text-white text-[18px] sm:text-2xl md:text-3xl lg:text-[35px] mx-auto">Designed for Everything and Always</h2>
-          <img src="./src/assets/Frame.svg" alt="" class="mx-auto mt-[27px] md:mt-[52px]"/>
+        <div
+          class="max-[350px]:min-h-[400px] max-[540px]:min-h-[600px] min-h-[800px] lg:min-h-[900px] container text-center dark:text-white pt-[35px] lg:pt-[70px] pb-[30px]"
+        >
+          <h2
+            class="max-w-[564px] w-full dark:text-white text-[18px] sm:text-2xl md:text-3xl lg:text-[35px] mx-auto"
+          >
+            Designed for Everything and Always
+          </h2>
+          <img
+            src="./src/assets/Frame.svg"
+            alt=""
+            class="mx-auto mt-[27px] md:mt-[52px]"
+          />
           <div class="relative">
-            <img src="./src/assets/Rectangle.png" alt="" class="mt-[30px] mx-auto">
-            <span class="text-xs uppercase absolute top-10 right-[30%] max-[1096px]:right-[25%] max-[915px]:right-[20%] max-[720px]:right-[10%] max-[525px]:text-[10px] max-[525px]:right-0 max-[375px]:hidden">Beechwood spatula & <br>built-in spoon rest</span>
-            <span class="text-xs uppercase absolute top-22 left-[20%] max-[292px]:left-[15%] max-[1122px]:left-[10%] max-[960px]:left-[3%] max-[800px]:left-[0%] max-[760px]:hidden">Modular lid to <br> release & trap steam</span>
-            <span class="text-xs uppercase absolute top-[50%] right-[30%] max-[1096px]:right-[25%] max-[915px]:right-[20%] max-[720px]:right-[10%] max-[525px]:text-[10px] max-[525px]:right-0 max-[375px]:hidden">Nesting steamer basket & <br> colander</span>
-            <span class="text-xs uppercase absolute top-[63%] left-[27%] max-[1292px]:left-[23%] max-[1122px]:left-[19%] max-[915px]:left-[14%] max-[768px]:left-[3%] max-[525px]:text-[10px] max-[525px]:left-0 max-[375px]:hidden">2 easy-pour <br> spouts</span>
-            <span class="text-xs uppercase absolute top-[78%] right-[28%] max-[1096px]:right-[22%] max-[915px]:right-[18%] max-[720px]:right-[5%] max-[525px]:text-[10px] max-[525px]:right-[0%] max-[375px]:hidden">stay cool handle</span>
-            <span class="text-xs uppercase absolute top-[84%] left-[20%] max-[1292px]:left-[15%] max-[1122px]:left-[10%] max-[960px]:left-[6%] max-[915px]:left-[2%] max-[760px]:hidden ">Exclusive, ceramic <br> nonstick made without <br> PFOAs & PTFEs</span>
+            <img
+              src="./src/assets/Rectangle.png"
+              alt=""
+              class="mt-[30px] mx-auto"
+            />
+            <span
+              class="text-xs uppercase absolute top-10 right-[30%] max-[1096px]:right-[25%] max-[915px]:right-[20%] max-[720px]:right-[10%] max-[525px]:text-[10px] max-[525px]:right-0 max-[375px]:hidden"
+              >Beechwood spatula & <br />built-in spoon rest</span
+            >
+            <span
+              class="text-xs uppercase absolute top-22 left-[20%] max-[292px]:left-[15%] max-[1122px]:left-[10%] max-[960px]:left-[3%] max-[800px]:left-[0%] max-[760px]:hidden"
+              >Modular lid to <br />
+              release & trap steam</span
+            >
+            <span
+              class="text-xs uppercase absolute top-[50%] right-[30%] max-[1096px]:right-[25%] max-[915px]:right-[20%] max-[720px]:right-[10%] max-[525px]:text-[10px] max-[525px]:right-0 max-[375px]:hidden"
+              >Nesting steamer basket & <br />
+              colander</span
+            >
+            <span
+              class="text-xs uppercase absolute top-[63%] left-[27%] max-[1292px]:left-[23%] max-[1122px]:left-[19%] max-[915px]:left-[14%] max-[768px]:left-[3%] max-[525px]:text-[10px] max-[525px]:left-0 max-[375px]:hidden"
+              >2 easy-pour <br />
+              spouts</span
+            >
+            <span
+              class="text-xs uppercase absolute top-[78%] right-[28%] max-[1096px]:right-[22%] max-[915px]:right-[18%] max-[720px]:right-[5%] max-[525px]:text-[10px] max-[525px]:right-[0%] max-[375px]:hidden"
+              >stay cool handle</span
+            >
+            <span
+              class="text-xs uppercase absolute top-[84%] left-[20%] max-[1292px]:left-[15%] max-[1122px]:left-[10%] max-[960px]:left-[6%] max-[915px]:left-[2%] max-[760px]:hidden"
+              >Exclusive, ceramic <br />
+              nonstick made without <br />
+              PFOAs & PTFEs</span
+            >
+          </div>
+        </div>
+      </section>
+      <!-- card -->
+      <section class="">
+        <div class="container pt-[50px] lg:pt-[80px] pb-[65px] dark:text-white">
+          <h2
+            class="font-bold text-[22px] md:text-2xl lg:text-[33px] max-w-[477px] text-center mx-auto"
+          >
+            From curated essentials to limited-run editions.
+          </h2>
+          <p
+            class="text-sm md:text-[16px] lg:text-[18px] max-w-[441px] mx-auto mt-2 md:mt-3.5 lg:mt-5"
+          >
+            We make products inspired by traditions – and we're starting with
+            one you might be familiar with: Dinner.
+          </p>
+          <div
+            class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 md:gap-[40px] lg:gap-[60px] mt-[80px]"
+          >
+            <!-- card 1 -->
+            <div class="pb-[25px] dark:text-white">
+              <div
+                class="bg-[#F7F3EB] max-w-[285px] w-full max-h-[229px] h-full rounded-full overflow-hidden dark:bg-dark2 mx-auto"
+              >
+                <img
+                  src="src/assets/image 1.svg"
+                  alt=""
+                  class="-translate-y-[60px] mx-auto hover:scale-105 duration-100"
+                />
+              </div>
+              <div class="text-center px-[60px]">
+                <p class="mt-4 text-sm uppercase">Side Bowls</p>
+                <p class="mt-1 text-[13px]">SET OF 4 -$45</p>
+                <p class="mt-1 text-sm">
+                  Hand-painted porcelain stackable bowls, designed for plating,
+                  eating, and scooping.
+                </p>
+                <img
+                  src="./src/assets/Frame (1).svg"
+                  alt=""
+                  class="mt-7 mx-auto"
+                />
+              </div>
+            </div>
+            <!-- card 2 -->
+            <div class="pb-[25px] dark:text-white">
+              <div
+                class="bg-[#F7F3EB] max-w-[285px] w-full max-h-[229px] h-full rounded-full overflow-hidden dark:bg-dark2 mx-auto"
+              >
+                <img
+                  src="src/assets/image 2.png"
+                  alt=""
+                  class="-translate-y-[60px] mx-auto hover:scale-105 duration-100"
+                />
+              </div>
+              <div class="text-center px-[60px]">
+                <p class="mt-4 text-sm uppercase">Drinking Glasses</p>
+                <p class="mt-1 text-[13px]">SET OF 4 -$50</p>
+                <p class="mt-1 text-sm">
+                  Hand-made and stackable. Made from recycled glass and natural
+                  sand. Naturally colored, without dyes.
+                </p>
+                <img
+                  src="./src/assets/Frame (2).svg"
+                  alt=""
+                  class="mt-7 mx-auto"
+                />
+              </div>
+            </div>
+            <!-- card 3 -->
+            <div class="pb-[25px] dark:text-white">
+              <div
+                class="bg-[#F7F3EB] max-w-[285px] w-full max-h-[229px] h-full rounded-full overflow-hidden dark:bg-dark2 mx-auto"
+              >
+                <img
+                  src="src/assets/image 3.png"
+                  alt=""
+                  class="-translate-y-[70px] mx-auto hover:scale-105 duration-100"
+                />
+              </div>
+              <div class="text-center px-[60px]">
+                <p class="mt-4 text-sm uppercase">Main Plates</p>
+                <p class="mt-1 text-[13px]">SET OF 4 -$50</p>
+                <p class="mt-1 text-sm">
+                  Hand-painted porcelain plates, stackable and designed for big
+                  appetites.
+                </p>
+                <img
+                  src="./src/assets/Frame (3).svg"
+                  alt=""
+                  class="mt-11 mx-auto"
+                />
+              </div>
+            </div>
+            <!-- card 4 -->
+            <div class="pb-[25px] dark:text-white">
+              <div
+                class="bg-[#F7F3EB] max-w-[285px] w-full max-h-[229px] h-full rounded-full overflow-hidden dark:bg-dark2 mx-auto"
+              >
+                <img
+                  src="src/assets/image 4.png"
+                  alt=""
+                  class="translate-y-[40px] mx-auto hover:scale-105 duration-100"
+                />
+              </div>
+              <div class="text-center px-[60px]">
+                <p class="mt-4 text-sm uppercase">Main Plates</p>
+                <p class="mt-1 text-[13px]">SET OF 4 -$50</p>
+                <p class="mt-1 text-sm">
+                  Hand-painted porcelain plates, stackable and designed for big
+                  appetites.
+                </p>
+              </div>
+              <img
+                src="./src/assets/Frame (4).svg"
+                alt=""
+                class="mt-11 mx-auto"
+              />
+            </div>
           </div>
         </div>
       </section>
