--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         </div>
       </section>
       <!-- card -->
-      <section class="">
+      <section>
         <div class="container pt-[50px] lg:pt-[80px] pb-[65px] dark:text-white">
           <h2
             class="font-bold text-[22px] md:text-2xl lg:text-[33px] max-w-[477px] text-center mx-auto"
@@ -330,8 +330,89 @@
           </div>
         </div>
       </section>
+      <!-- dirty dishes -->
+      <section class="dark:bg-dark2">
+        <div
+          class="grid grid-cols-1 lg:grid-cols-3 place-items-center bg-[#F5F1E9] dark:bg-dark2 dark:text-white"
+        >
+          <img src="./src/assets/Rectangle (1).png" alt="" />
+          <div
+            class="max-w-[480px] w-full h-full place-content-center place-items-center max-md:py-[70px] max-lg:py-[109px]"
+          >
+            <p class="text-xs text-[#35312E] dark:text-white">#DirtyDishes</p>
+            <p
+              class="font-bold text-[18px] md:text-2xl text-center mt-[33px] mb-[61px]"
+            >
+              A full sink is a sign of a great night. You wash, we'll dry.
+            </p>
+            <button
+              class="font-bold text-xs text-[#4F463F] rounded-sm py-[20px] px-[41px] bg-white hover:bg-[#D37657] duration-150 dark:text-black"
+            >
+              Follow Along
+            </button>
+          </div>
+          <img src="./src/assets/Rectangle (2).png" alt="" />
+        </div>
+      </section>
+      <footer class="bg-[#6C674D] dark:bg-[#052F4A] py-[80px]">
+        <div
+          class="container text-white grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-[30px] gap-y-[70px]"
+        >
+          <!-- col 1 -->
+          <ul class="">
+            <p class="font-bold text-2xl">Keep in touch ☺</p>
+            <p class="text-sm mt-3">
+              Be the first to know about new collections, special events, and
+              what’s going on at Our Place.
+            </p>
+          </ul>
+          <!-- col 2 -->
+          <ul class="leading-10">
+            <p class="font-bold text-xs uppercase mb-2.5">Shop</p>
+            <li><a href="#" class="text-base opacity-60">Main Plates</a></li>
+            <li><a href="#" class="text-base opacity-60">Side Bowls</a></li>
+            <li>
+              <a href="#" class="text-base opacity-60">Drinking Glasses</a>
+            </li>
+            <li>
+              <a href="#" class="text-base opacity-60"
+                >Family Dinner <br />
+                Bundle</a
+              >
+            </li>
+          </ul>
+          <!-- col 3 -->
+          <ul class="leading-10">
+            <p class="font-bold text-xs uppercase mb-2.5">Company</p>
+            <li><a href="#" class="text-base opacity-60">Mission</a></li>
+            <li><a href="#" class="text-base opacity-60">FAQs</a></li>
+            <li><a href="#" class="text-base opacity-60">Contact Us</a></li>
+            <li><a href="#" class="text-base opacity-60">Returns</a></li>
+            <li><a href="#" class="text-base opacity-60">Bulk Orders</a></li>
+            <li><a href="#" class="text-base opacity-60">Careers</a></li>
+          </ul>
+          <!-- col 4 -->
+          <ul class="leading-10">
+            <p class="font-bold text-xs uppercase mb-2.5">Social</p>
+            <li><a href="#" class="text-base opacity-60">Instagram</a></li>
+            <li><a href="#" class="text-base opacity-60">Twitter</a></li>
+          </ul>
+        </div>
+      </footer>
+      <footer class="bg-[#807C62] text-white dark:bg-dark2">
+        <div
+          class="h-[75px] container flex justify-between items-center max-sm:flex-col max-sm:py-2"
+        >
+          <span>© Our Place 2021</span>
+          <div class="flex gap-7 text-sm max-[400px]:gap-3">
+            <span>Copyright 2021</span>
+            <span>Privacy</span>
+            <span>Terms</span>
+            <span>Returns</span>
+          </div>
+        </div>
+      </footer>
     </main>
-
     <!-- js  -->
     <script src="./src/js/app.js"></script>
   </body>
