fix text w and...

--- a/index.html
+++ b/index.html
@@ -219,13 +219,13 @@
             From curated essentials to limited-run editions.
           </h2>
           <p
-            class="text-sm md:text-[16px] lg:text-[18px] max-w-[441px] mx-auto mt-2 md:mt-3.5 lg:mt-5"
+            class="text-sm md:text-[16px] lg:text-[18px] max-w-[441px] mx-auto mt-2 md:mt-3.5 lg:mt-5 text-center"
           >
             We make products inspired by traditions – and we're starting with
             one you might be familiar with: Dinner.
           </p>
           <div
-            class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 md:gap-[40px] lg:gap-[60px] mt-[80px]"
+            class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 md:gap-[40px] lg:gap-[60px] gap-y-[70px] mt-[80px]"
           >
             <!-- card 1 -->
             <div class="pb-[25px] dark:text-white">
@@ -341,7 +341,7 @@
           >
             <p class="text-xs text-[#35312E] dark:text-white">#DirtyDishes</p>
             <p
-              class="font-bold text-[18px] md:text-2xl text-center mt-[33px] mb-[61px]"
+              class="font-bold text-[18px] md:text-2xl text-center mt-[33px] mb-[61px] max-sm:max-w-[300px] "
             >
               A full sink is a sign of a great night. You wash, we'll dry.
             </p>
