--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             Place
           </h2>
           <p
-            class="max-w-[650px] text-xs min-[450px]:text-sm md:text-[16px] dark:text-white"
+            class="max-w-[650px] text-sm md:text-[16px] dark:text-white text-center"
           >
             At Our Place, we believe in the power of home-cooking to bring
             people together. Our collections are new heirlooms from the cultures
